--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head
+<head>
     <title>My first web page</title>
 </head>
 <body>
     <h1>Hello, World!</h1>
     <p>This is my first web page.</p>
-
-    <table>
+<table>
   <tr>
     <th>Company</th>
     <th>Contact</th>
@@ -24,6 +23,40 @@
     <td>Mexico</td>
   </tr>
 </table>
-</body>
 
+<div>
+<p style='
+color:red;
+'>Welcome to Daystar University where Education is our main goal and we also involve our students in sports</p>
+
+<p style='
+color:blue;
+text-transform:uppercase;
+'>Welcome to Daystar University where Education is our main goal and we also involve our students in sports</p>
+
+<p style='
+color:brown;
+text-transform:lowercase;
+'>Welcome to Daystar University where Education is our main goal and we also involve our students in sports</p>
+
+
+
+</div>
+
+
+<h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+
+<img src="Images/1.jfif" alt="Image1" width="300" height="500">
+<img src="Images/1.jfif" alt="Image1" width="300" height="500">
+<img src="Images/1.jfif" alt="Image1" width="300" height="500">
+
+<br>
+
+
+ <iframe id="player" src="https://www.youtube.com/embed/OZ87Q5v3keA?si=9jB4IbApUhMfYKfH" allowfullscreen class="" width="480" height="300"></iframe>
+
+
+</body>
 </html>
