--- a/index.html
+++ b/index.html
@@ -1,62 +1,87 @@
 <!DOCTYPE html>
-<html>
 <head>
-    <title>My first web page</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is my first web page.</p>
-<table>
-  <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
-  </tr>
-  <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-  </tr>
-  <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-  </tr>
-</table>
 
-<div>
-<p style='
-color:red;
-'>Welcome to Daystar University where Education is our main goal and we also involve our students in sports</p>
+     <h2>Table with 5 rows and 5 columns</h2>
+  <table border="1">
+    <tr>
+      <th>Monday</th>
+      <th>Tuesday</th>
+      <th>Wednesday</th>
+      <th>Thursday</th>
+      <th>Friday</th>
+    </tr>
+    <tr>
+      <td>push ups 2 reps 20 sets</td>
+      <td>pull ups 2 reps 20 sets</td>
+      <td>handstand push ups 2 reps 20 sets</td>
+      <td>planche push ups 2 reps 20 sets</td>
+      <td>muscle ups 2 reps 20 sets</td>
+    </tr>
+    <tr>
+      <td>push ups 2 reps 20 sets</td>
+      <td>pull ups 2 reps 20 sets</td>
+      <td>handstand push ups 2 reps 20 sets</td>
+      <td>planche push ups 2 reps 20 sets</td>
+      <td>muscle ups 2 reps 20 sets</td>
+    </tr>
+     <tr>
+      <td>push ups 2 reps 20 sets</td>
+      <td>pull ups 2 reps 20 sets</td>
+      <td>handstand push ups 2 reps 20 sets</td>
+      <td>planche push ups 2 reps 20 sets</td>
+      <td>muscle ups 2 reps 20 sets</td>
+    </tr>
+     <tr>
+      <td>push ups 2 reps 20 sets</td>
+      <td>pull ups 2 reps 20 sets</td>
+      <td>handstand push ups 2 reps 20 sets</td>
+      <td>planche push ups 2 reps 20 sets</td>
+      <td>muscle ups 2 reps 20 sets</td>
+    </tr>
 
-<p style='
-color:blue;
-text-transform:uppercase;
-'>Welcome to Daystar University where Education is our main goal and we also involve our students in sports</p>
+     <tr>
+      <td>push ups 2 reps 20 sets</td>
+      <td>pull ups 2 reps 20 sets</td>
+      <td>handstand push ups 2 reps 20 sets</td>
+      <td>planche push ups 2 reps 20 sets</td>
+      <td>muscle ups 2 reps 20 sets</td>
+    </tr>
 
-<p style='
-color:brown;
-text-transform:lowercase;
-'>Welcome to Daystar University where Education is our main goal and we also involve our students in sports</p>
+   </table>
 
+   <br>
 
+   <h2>nested list</h2>
+   <ol>
+    <li>normal exersises</li>
+    <li>Exercise 1
+      <ul>
+        <li>Push ups</li>
+        <li>Pull ups</li>
+      </ul>
+    </li>
+    <li>advanced exercises</li>
+    <li>Exercise 2
+      <ul>
+        <li>Handstand push ups</li>
+        <li>Planche push ups</li>
+      </ul>
+    </li>
+    <li>elite exersises</li>
+    <li>Pro elite exersises</li>
+    <li>elite enduarance exersises</li>
 
-</div>
+  </ol>
 
-
-<h1>Heading 1</h1>
-<h2>Heading 2</h2>
-<h3>Heading 3</h3>
-
-<img src="Images/1.jfif" alt="Image1" width="300" height="500">
-<img src="Images/1.jfif" alt="Image1" width="300" height="500">
-<img src="Images/1.jfif" alt="Image1" width="300" height="500">
-
-<br>
-
-
- <iframe id="player" src="https://www.youtube.com/embed/OZ87Q5v3keA?si=9jB4IbApUhMfYKfH" allowfullscreen class="" width="480" height="300"></iframe>
-
-
+  <p>As Albert Einstein once said:</p>
+<blockquote>
+  <p>"Imagination is more important than knowledge. Knowledge is limited. Imagination encircles the world. The true sign of intelligence is not knowledge but imagination."</p>
+</blockquote>
+<p>This quote speaks to the idea that creativity and original thinking are more important than simply accumulating knowledge. It suggests that being able to see beyond what is already known and to imagine new possibilities is a key characteristic of intelligence.</p>
+ 
+    
 </body>
 </html>
