Update index.html for assessment formatting

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Document</title>
+    <title>Assesment1</title>
 </head>
 <body>
 
@@ -85,3 +85,4 @@
     
 </body>
 </html>
+
